Trumpworld: added legend and other things
Also…
- Saved terminal logs from git “test branch1” problem
- Updated todo items

--- a/public/trumpworld-style.css
+++ b/public/trumpworld-style.css
@@ -46,11 +46,14 @@
 	}
 
 	#legend {
-		/*border: 2px solid;*/
 		position:fixed;
 		bottom: 0;
 		width: 180px;
 		height: 120px;
+	}
+
+	.legendText {
+		font-color: black;
 	}
 
 	ul {
