Added FizzBuzz to visualizations page, wrote (commented) overlay code for Trumpworld

--- a/views/visualizations.html
+++ b/views/visualizations.html
@@ -113,6 +113,20 @@
 					      </div> <!-- /caption -->
 							</div>
 
+							<div class="col-md-4 col-md-offset-0 col-sm-6 col-sm-offset-0 col-xs-8 col-xs-offset-2 vizblock">
+						    <div class="thumbnail_container">
+						      <div class="thumbnail">
+						      	<a href="fizzbuzz">
+						        	<img src="fizzbuzz284.png">
+						        </a>
+						      </div>
+						    </div> <!-- /thumbnail -->
+
+						    <div class = "caption fizzbuzz">
+					        	<h3><a href="fizzbuzz">Fizzbuzz</a></h3>
+					      </div> <!-- /caption -->
+							</div>
+
 					  </div> <!-- /row -->
 					</div> <!-- /container-fluid -->
 
