--- a/public/trumpworld-style.css
+++ b/public/trumpworld-style.css
@@ -4,6 +4,7 @@
 		position: absolute;
 		text-shadow: #ffffff 0 0 15px, #ffffff 0 0 10px, #ffffff 0 0 4px;
 		z-index: 2000;
+		cursor: pointer;
 	}
 
 	body {
@@ -50,7 +51,21 @@
 		bottom: 0;
 		width: 140px;
 		height: 120px;
-		background-color: rgba(247, 247, 247, 0.85);
+		background-color: rgba(247, 247, 247, 0.85)
+	}
+
+	#overlay {
+		position: fixed;
+		display: none;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		background-color: rgba(0,0,0,0.7);
+		z-index: 2100;
+		cursor: pointer;
 	}
 
 	.legendText {
@@ -65,13 +80,13 @@
 	}
 
 	li {
-  	padding-top: 10px;
-  	padding-bottom: 10px;
-  	padding-left: 7px;
-  	margin-left: 7px;
-  	margin-right: 6px;
-  	list-style-type: none;
-  	border-radius: 7px;
+	  	padding-top: 10px;
+	  	padding-bottom: 10px;
+	  	padding-left: 7px;
+	  	margin-left: 7px;
+	  	margin-right: 6px;
+	  	list-style-type: none;
+	  	border-radius: 7px;
 	}
 
 	li:hover {
@@ -85,8 +100,12 @@
 
 	.nodes circle {
 	  fill: #ccc;
+	  /*paint-order: stroke;*/
 	  stroke: white;
-	  /*stroke-opacity: .3;*/
+	}
+
+	.nodes.selectedNode circle {
+	  /*paint-order: stroke;*/
 	}
 
 	.nodes text {
