--- a/public/trumpworld-style.css
+++ b/public/trumpworld-style.css
@@ -42,6 +42,22 @@
 		padding-right: 10px;
 	}
 
+	#selectorDiv {
+		width: 264px;
+		/*border: 1px solid black;*/
+		padding-top: 10px;
+		padding-bottom: 10px;
+		padding-left: 20px;
+		/*padding-right: 20px;*/
+		position: fixed;
+		background-color: #f7f7f7;
+		z-index: 900;
+	}
+
+	#selectText {
+		display: inline-block;
+	}
+
 	#listDiv {
 		/*padding-top: 30px;*/
 	}
@@ -49,9 +65,11 @@
 	#legend {
 		position:fixed;
 		bottom: 0;
-		width: 140px;
+		width: 284px;
+		/*width: 140px;*/
 		height: 120px;
-		background-color: rgba(247, 247, 247, 0.85)
+		background-color: #f7f7f7;
+		/*background-color: rgba(247, 247, 247, 0.85)*/
 	}
 
 	#overlay {
@@ -70,6 +88,7 @@
 
 	.legendText {
 		font-color: black;
+		text-transform: capitalize;
 	}
 
 	ul {
@@ -134,22 +153,6 @@
 	  fill: none;
 	  /*fill-opacity: 0;*/
 	  pointer-events: all;
-	}
-
-	#selectText {
-		display: inline-block;
-	}
-
-	#selectorDiv {
-		width: 264px;
-		/*border: 1px solid black;*/
-		padding-top: 10px;
-		padding-bottom: 10px;
-		padding-left: 20px;
-		/*padding-right: 20px;*/
-		position: fixed;
-		background-color: #f7f7f7;
-		z-index: 900;
 	}
 
 	#loader-wrapper {
