--- a/public/trumpworld-style.css
+++ b/public/trumpworld-style.css
@@ -1,245 +1,331 @@
-	h1 {
-		color: gold;
-		margin-left: 20px;
+h1 {
+	color: gold;
+	/*font-family: bf_tiny_handregular;*/
+	margin-left: 20px;
+	position: absolute;
+	text-shadow: #ffffff 0 0 15px, #ffffff 0 0 10px, #ffffff 0 0 4px;
+	z-index: 2000;
+}
+
+body {
+	font-family: helvetica;
+	font-size: 12px;
+	margin: 0;
+}
+
+svg {
+	/*border: 1px solid #f0f;*/
+	/*display: block;*/
+	/*margin: auto;*/
+}
+
+.d1 {
+	/*display: inline-block;*/
+	width: 300px;
+	right: 0px;
+	height: 100%;
+	overflow: hidden;
+	box-sizing: border-box;
+	position: absolute;
+	top:0;
+	background-color: #f7f7f7;
+}
+
+.d2 {
+	/*position: relative;
+	display: inline-block;*/
+	max-height: 100%;
+	overflow: auto;
+	padding-right: 10px;
+}
+
+#selectorDiv {
+	/*display: inline-block;*/
+	width: 264px;
+	/*border: 1px solid black;*/
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 20px;
+	/*padding-right: 20px;*/
+	position: fixed;
+	background-color: #f7f7f7;
+	z-index: 900;
+}
+
+#selectText {
+	display: inline-block;
+}
+
+#listDiv {
+	/*padding-top: 30px;*/
+}
+
+#legend {
+	/*display: inline-block;*/
+	position: absolute;
+	bottom: 0;
+	width: 284px;
+	height: 120px;
+	background-color: #f7f7f7;
+}
+
+.theLegend {
+	display: inline-block;
+	width: 50%;
+	height: 100%;
+	margin: 0;
+}
+
+#aboutDiv {
+	position: absolute;
+	display: inline-block;
+	width: 50%;
+	height: 100%;
+	/*background-color: #f7f7f7;*/
+}
+
+#aboutTextDiv {
+	position: absolute;
+	margin: auto;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	border-radius: 4px;
+	height:58%;
+	cursor: pointer;
+	border: 2px solid #dadada;
+
+	transition: background-color .1s ease,
+		border-color .2s ease;
+
+}
+
+#aboutTextDiv:hover {
+	background-color: white;
+	border-color: #afafaf;
+}
+
+.aboutP {
+	margin-top: 14;
+	margin-bottom: 10;
+}
+
+.aboutH3 {
+	margin-top: 12;
+	margin-bottom: 16;
+}
+
+.aboutText {
+	text-align: center;
+	/*cursor: pointer;*/
+}
+
+#overlay {
+	position: fixed;
+	display: none;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0,0,0,0.8);
+	z-index: 2100;
+	cursor: pointer;
+}
+
+.closeButton {
+	position: absolute;
+	top: 20px;
+	right: 45px;
+	font-size: 60px;
+	color: white;
+	cursor: pointer;
+}
+
+.closeButton a:hover, #closeButton a:link, #closeButton a:visited {
+	color: #bcf3ff;
+}
+
+.overlayText {
+	position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 50px;
+    color: white;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+}
+
+.overlayP {
+	cursor: default;
+}
+
+.overlayP a:link, .overlayP a:visited {
+	color: #bcf3ff;
+}
+
+.overlayP a:hover {
+	color: #9ce6ff;
+}
+
+.legendText {
+	font-color: black;
+	text-transform: capitalize;
+}
+
+ul {
+	margin-top: 55px;
+	padding-left: 12px;
+	padding-left: 8px;
+	padding-top: 3px;
+}
+
+li {
+  	padding-top: 10px;
+  	padding-bottom: 10px;
+  	padding-left: 7px;
+  	margin-left: 7px;
+  	margin-right: 6px;
+  	list-style-type: none;
+  	border-radius: 7px;
+}
+
+li:hover {
+	cursor: pointer;
+}
+
+.links {
+	stroke: grey;
+	stroke-width: 1px;
+}
+
+.nodes circle {
+  fill: #ccc;
+  /*paint-order: stroke;*/
+  stroke: white;
+}
+
+.nodes.selectedNode circle {
+  paint-order: stroke;
+}
+
+.nodes text {
+  display: none;
+  font: sans-serif;
+}
+
+
+/*.nodes:hover text {
+  display: inline;
+}
+
+.nodes text.labelShadow {
+  display: none;
+  font: sans-serif;
+}
+
+.nodes:hover text.labelShadow {
+  display: inline;
+  stroke: white;
+	text-shadow: #ffffff 0 0 6px, #ffffff 0 0 4px, #ffffff 0 0 2px;
+  /*stroke-width: 20;
+}*/
+
+
+.clip-path-circle {
+	/*stroke: crimson;*/
+  fill: none;
+  /*fill-opacity: 0;*/
+  pointer-events: all;
+}
+
+#loader-wrapper {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1000;
+	background-color: #f7f7f7;
+}
+
+	@-webkit-keyframes spin {
+	    0%   {
+	        -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+	        -ms-transform: rotate(0deg);  /* IE 9 */
+	        transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
+	    }
+	    100% {
+	        -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+	        -ms-transform: rotate(360deg);  /* IE 9 */
+	        transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
+	    }
+	}
+	@keyframes spin {
+	    0%   {
+	        -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+	        -ms-transform: rotate(0deg);  /* IE 9 */
+	        transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
+	    }
+	    100% {
+	        -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
+	        -ms-transform: rotate(360deg);  /* IE 9 */
+	        transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
+	    }
+	}
+
+	#loader {
+		display: block;
 		position: absolute;
-		text-shadow: #ffffff 0 0 15px, #ffffff 0 0 10px, #ffffff 0 0 4px;
-		z-index: 2000;
-		cursor: pointer;
+		left: 50%;
+		top: 50%;
+		width: 150px;
+		height: 150px;
+		margin: -75px 0 0 -75px;
+
+		border: 3px solid transparent;
+		border-top-color: rgb(31, 119, 180);
+		border-radius: 50%;
+		z-index: 1500;
+
+		-webkit-animation: spin 1.6s linear infinite;
+		animation: spin 1.6s linear infinite;
 	}
 
-	body {
-		font-family: helvetica;
-		font-size: 12px;
-		margin: 0;
-	}
-
-	svg {
-		/*border: 1px solid #f0f;*/
-		/*display: block;*/
-		/*margin: auto;*/
-	}
-
-	.d1 {
-		display: inline-block;
-
-		width: 300px;
-		/*min-width: 250px;
-		max-width: 350px;*/
-
-		right: 0px;
-		height: 100%;
-		overflow: hidden;
-		box-sizing: border-box;
+	/*#loader:before {*/
+	#loaderBefore {
+		display: block;
 		position: absolute;
-		top:0;
-		background-color: #f7f7f7;
+		left: 50%;
+		top: 50%;
+		width: 130px;
+		height: 130px;
+		margin: -65px 0 0 -65px;
+
+		border: 3px solid transparent;
+		border-top-color: rgb(255, 127, 14);
+		border-radius: 50%;
+
+		-webkit-animation: spin 1.2s linear infinite;
+		animation: spin 1.2s linear infinite;
 	}
 
-	.d2 {
-		position:relative;
-		max-height: 100%;
-		overflow:auto;
-		padding-right: 10px;
+	/*#loader:after {*/
+	#loaderAfter {
+		display: block;
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		width: 110px;
+		height: 110px;
+		margin: -55px 0 0 -55px;
+
+		border: 3px solid transparent;
+		border-top-color: rgb(44, 160, 44);
+		border-radius: 50%;
+
+		-webkit-animation: spin .8s linear infinite;
+		animation: spin .8s linear infinite;
 	}
-
-	#selectorDiv {
-		width: 264px;
-		/*border: 1px solid black;*/
-		padding-top: 10px;
-		padding-bottom: 10px;
-		padding-left: 20px;
-		/*padding-right: 20px;*/
-		position: fixed;
-		background-color: #f7f7f7;
-		z-index: 900;
-	}
-
-	#selectText {
-		display: inline-block;
-	}
-
-	#listDiv {
-		/*padding-top: 30px;*/
-	}
-
-	#legend {
-		position:fixed;
-		bottom: 0;
-		width: 284px;
-		/*width: 140px;*/
-		height: 120px;
-		background-color: #f7f7f7;
-		/*background-color: rgba(247, 247, 247, 0.85)*/
-	}
-
-	#overlay {
-		position: fixed;
-		display: none;
-		width: 100%;
-		height: 100%;
-		top: 0;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		background-color: rgba(0,0,0,0.7);
-		z-index: 2100;
-		cursor: pointer;
-	}
-
-	.legendText {
-		font-color: black;
-		text-transform: capitalize;
-	}
-
-	ul {
-		margin-top: 55px;
-		padding-left: 12px;
-		padding-left: 8px;
-		padding-top: 3px;
-	}
-
-	li {
-	  	padding-top: 10px;
-	  	padding-bottom: 10px;
-	  	padding-left: 7px;
-	  	margin-left: 7px;
-	  	margin-right: 6px;
-	  	list-style-type: none;
-	  	border-radius: 7px;
-	}
-
-	li:hover {
-		cursor: pointer;
-	}
-
-	.links {
-		stroke: grey;
-		stroke-width: 1px;
-	}
-
-	.nodes circle {
-	  fill: #ccc;
-	  /*paint-order: stroke;*/
-	  stroke: white;
-	}
-
-	.nodes.selectedNode circle {
-	  /*paint-order: stroke;*/
-	}
-
-	.nodes text {
-	  display: none;
-	  font: sans-serif;
-	}
-/*
-	.nodes:hover text {
-	  display: inline;
-	}
-	
-	.nodes text.labelShadow {
-	  display: none;
-	  font: sans-serif;
-	}
-
-	.nodes:hover text.labelShadow {
-	  display: inline;
-	  stroke: white;
-		text-shadow: #ffffff 0 0 6px, #ffffff 0 0 4px, #ffffff 0 0 2px;
-	  /*stroke-width: 20;*/
-	}
-*/
-	.clip-path-circle {
-		/*stroke: crimson;*/
-	  fill: none;
-	  /*fill-opacity: 0;*/
-	  pointer-events: all;
-	}
-
-	#loader-wrapper {
-		position: fixed;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		z-index: 1000;
-		background-color: #f7f7f7;
-	}
-
-		@-webkit-keyframes spin {
-		    0%   {
-		        -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
-		        -ms-transform: rotate(0deg);  /* IE 9 */
-		        transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
-		    }
-		    100% {
-		        -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
-		        -ms-transform: rotate(360deg);  /* IE 9 */
-		        transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
-		    }
-		}
-		@keyframes spin {
-		    0%   {
-		        -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
-		        -ms-transform: rotate(0deg);  /* IE 9 */
-		        transform: rotate(0deg);  /* Firefox 16+, IE 10+, Opera */
-		    }
-		    100% {
-		        -webkit-transform: rotate(360deg);  /* Chrome, Opera 15+, Safari 3.1+ */
-		        -ms-transform: rotate(360deg);  /* IE 9 */
-		        transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
-		    }
-		}
-
-		#loader {
-			display: block;
-			position: absolute;
-			left: 50%;
-			top: 50%;
-			width: 150px;
-			height: 150px;
-			margin: -75px 0 0 -75px;
-
-			border: 3px solid transparent;
-			border-top-color: rgb(31, 119, 180);
-			border-radius: 50%;
-			z-index: 1500;
-
-			-webkit-animation: spin 1.6s linear infinite;
-			animation: spin 1.6s linear infinite;
-		}
-
-		/*#loader:before {*/
-		#loaderBefore {
-			display: block;
-			position: absolute;
-			left: 50%;
-			top: 50%;
-			width: 130px;
-			height: 130px;
-			margin: -65px 0 0 -65px;
-
-			border: 3px solid transparent;
-			border-top-color: rgb(255, 127, 14);
-			border-radius: 50%;
-
-			-webkit-animation: spin 1.2s linear infinite;
-			animation: spin 1.2s linear infinite;
-		}
-
-		/*#loader:after {*/
-		#loaderAfter {
-			display: block;
-			position: absolute;
-			left: 50%;
-			top: 50%;
-			width: 110px;
-			height: 110px;
-			margin: -55px 0 0 -55px;
-
-			border: 3px solid transparent;
-			border-top-color: rgb(44, 160, 44);
-			border-radius: 50%;
-
-			-webkit-animation: spin .8s linear infinite;
-			animation: spin .8s linear infinite;
-		}
