--- a/views/index.html
+++ b/views/index.html
@@ -68,9 +68,9 @@
 
 			  <div class="cover">
 			    <h1 class="cover-heading">Welcome to DadaData</h1>
-			    <p class="lead blurb tagline">Interactive data visualizations for realists and surrealists alike.</p>
+			    <p class="lead blurb tagline home-text">Interactive data visualizations for realists and surrealists alike.</p>
 			    <p class="lead">
-			      <a href="visualizations" class="btn btn-lg btn-default">See Visualizations</a>
+			      <a href="visualizations" class="btn btn-lg btn-default btn-see-visualizations">See Visualizations</a>
 			    </p>
 			  </div>
 
