--- a/views/about.html
+++ b/views/about.html
@@ -63,11 +63,20 @@
 
 	  <div class="container">
 
-	  	<div class="conainer-inner">
+	  	<div class="container-inner">
+
+  			<div class="lead blurb boxed">DIV!</div>
+  			<div class="lead blurb boxed">DIV!</div>
+  			<div class="lead blurb boxed">DIV!</div>
+  			<div class="lead blurb boxed">DIV!</div>
+  			<div class="lead blurb boxed">DIV!</div>
+  			<div class="lead blurb boxed">DIV!</div>
 
 			  <div class="cover">
-			    <h1 class="cover-heading">DadaData</h1>
-			    <p class="lead blurb boxed">Interactive data visualizations<br>Made with love in Brooklyn<br>&#10697<br>Data insights and data art<br>For both hemispheres of the brain</p>
+			    <!-- <h1 class="cover-heading">DadaData</h1> -->
+
+			    <!-- <p class="lead blurb boxed">Interactive data visualizations<br>Made with love in Brooklyn<br>&#10697<br>Data insights and data art<br>For both hemispheres of the brain</p> -->
+
 			    <!-- <p class="lead">
 			      <a href="visualizations" class="btn btn-lg btn-default">See Visualizations</a>
 			    </p> -->
