--- a/views/visualizations.html
+++ b/views/visualizations.html
@@ -63,7 +63,7 @@
 	  </nav>
 
 	  <div class="container">
-	  	<div class="conainer-inner">
+	  	<div class="container-inner">
 			  <div class="cover">
 			    <h1 class="cover-heading">Visualizations</h1>
 			    
