--- a/views/contact.html
+++ b/views/contact.html
@@ -63,7 +63,7 @@
 
 	  <div class="container">
 
-	  	<div class="conainer-inner">
+	  	<div class="container-inner">
 
 			  <div class="cover">
 			    <h1 class="cover-heading">Email:</h1>
