--- a/views/index.html
+++ b/views/index.html
@@ -63,7 +63,7 @@
 
 	  <div class="container">
 
-	  	<div class="conainer-inner">
+	  	<div class="container-inner">
 
 			  <div class="cover">
 			    <h1 class="cover-heading">Welcome to DadaData</h1>
